<resources>
    <string name="app_name">CarryOn</string>
    <string name="logo">carry on logo</string>
    <string name="reset_password">Forgot your password?</string>
    <string name="new_sign_up">Don\'t have an account?</string>
    <string name="set_email_message">Enter your e-mail</string>
    <string name="set_password_message">Password</string>
    <string name="button_login">Log In</string>
    <string name="insert_your_details">Insert your details</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="username">Username</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="main_address">Main Address</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_address">Start Address</string>
    <string name="end_address">End Address</string>
    <string name="range">Range</string>
    <string name="date_departure">Departure Date</string>
    <string name="date_departure_hint">dd/mm/yy</string>
    <string name="hour_departure">Departure Time</string>
    <string name="hour_departure_hint">hh-mm</string>
    <string name="time_travel">Estimated time of travel</string>
    <string name="transport">Main Transport</string>
    <string name="new_path">New Path</string>
    <string name="new_order">New Order</string>
    <string name="add">Add</string>
    <string name="insert_here">Insert here</string>
    <string name="hours">hh :&#160;</string>
    <string name="minutes">mm</string>
    <string name="order">Order</string>
    <string name="show_qr_code">Show QR code</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="delivery">Delivery</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="path_inserted">Path Inserted</string>
    <string name="back_to_homepage">Back to Homepage</string>
    <string name="receiver"><u>Receiver</u></string>
    <string name="carrier"><u>Carrier</u></string>

    <string name="loading"><u>Loading...</u></string>
    <string name="coming_soon"><u>Coming soon in the next version!</u></string>



    //NEW DELIVERY ACTIVITY
    <string name="new_delivery">New Delivery</string>
    <string name="look_for_carriers">Look for carriers</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="you">You</string>
    <string name="insert_username">Insert username</string>
    <string name="whats_in_package">&#160;What\'s in your package?</string>
    <string name="size">Size</string>
    <string name="height">&#160;Height&#160;</string>
    <string name="width">&#160;Width&#160;</string>
    <string name="depth">&#160;Depth&#160;</string>
    <string name="weight">Weight</string>
    <string name="kg">&#160;&#160;Kg</string>
    <string name="cm">cm</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="from_now">From Now</string>

    //SINGLE DELIVERY / ORDER
    <string name="accepted">accepted</string>
    <string name="got_package">got package</string>
    <string name="delivered_package">completed the delivery</string>
    <string name="you_accepted">You accepted the delivery</string>
    <string name="you_got_package">You got the package</string>
    <string name="you_delivered_package">You completed the delivery</string>
    <string name="message_start">From your CarryOn carrier: </string>

    //SELECT CARRIER
    <string name="title">Select your carrier</string>
    <string name="title_activity_home_finalissima">HomeFinalissima</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

</resources>
