<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:nestedScrollingEnabled="false"
    android:orientation="vertical"
    tools:context=".NewDeliveryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_newDelivery"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical|center_horizontal"
            android:gravity="bottom|center_horizontal|center"
            android:text="@string/new_delivery"
            android:textAppearance="@android:style/TextAppearance.Material.Large"
            android:textColor="@color/deliveredStatus"
            android:textSize="30sp" />
    </LinearLayout>

    <View
        android:id="@+id/separatingLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@android:color/black" />

    <RadioGroup
        android:id="@+id/radioGroup_sendReceive"
        android:layout_width="340dp"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:checkedButton="@+id/button_send"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_weight="1"
            android:background="@drawable/send_button"
            android:button="@null"
            android:gravity="center"
            android:onClick="onRadioButtonClicked"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/send"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/button_receive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@drawable/send_button"
            android:button="@null"
            android:gravity="center_vertical|center_horizontal|center"
            android:onClick="onRadioButtonClicked"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:text="@string/receive"
            android:textAppearance="@android:style/TextAppearance.Holo.Large"
            android:textColor="#ffffff" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_from"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/editText_senderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_username"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/you" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_to"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/editText_receiverName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_username"
            android:inputType="textPersonName" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_contents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:text="@string/contents"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/editText_packageContents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:ems="10"
        android:hint="@string/whats_in_package"
        android:inputType="text"
        android:singleLine="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_size"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/height"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/height"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" x "
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:id="@+id/width"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/width"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text=" x "
            android:textAppearance="@android:style/TextAppearance.Material.Large" />

        <TextView
            android:id="@+id/depth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/depth"
            android:inputType="number"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_weight"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/weight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="Insert weight here"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/kg"
            android:textColor="@color/black"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_date"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/in_date2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/date_departure_hint"
            android:textColorLink="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/in_time2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hour_departure_hint"
            android:textColorLink="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_lookForCarriers"
        android:layout_width="257dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="53dp"
        android:layout_marginStart="53dp"
        android:layout_weight="1"
        android:background="#FFD123"
        android:text="@string/look_for_carriers"
        android:textColor="#16518E" />

</LinearLayout>