<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/editText_insertDetails"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:paddingTop="4dp"
        android:text="@string/insert_your_details"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="137dp" />

    <EditText
        android:id="@+id/editText_surname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="97dp" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textCursorDrawable="@color/colorPrimary"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="57dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editText_sex"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:layout_weight="0.5"
            android:gravity="center_vertical"
            android:paddingBottom="4dp"
            android:paddingTop="8dp"
            android:text="@string/sex"
            android:textColor="@android:color/darker_gray"
            android:textSize="20sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_weight="2"
            android:orientation="horizontal"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/button_male"
                style="@android:style/Widget.Holo.CompoundButton.RadioButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/male"
                android:textSize="18sp"
                android:visibility="visible" />

            <RadioButton
                android:id="@+id/button_female"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/colorPrimary"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/female"
                android:textSize="18sp"
                android:visibility="visible" />
        </RadioGroup>
    </LinearLayout>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textCursorDrawable="@color/colorPrimary"
        tools:hint="@string/email"
        tools:layout_editor_absoluteX="65dp"
        tools:layout_editor_absoluteY="244dp" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textCursorDrawable="@color/colorPrimary"
        tools:hint="@string/password"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="382dp" />

    <EditText
        android:id="@+id/editText_repeatPassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textCursorDrawable="@color/colorPrimary"
        tools:hint="@string/repeat_password"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="428dp" />

    <EditText
        android:id="@+id/editText_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textCursorDrawable="@color/colorPrimary"
        tools:hint="@string/phone_number"
        tools:layout_editor_absoluteX="63dp"
        tools:layout_editor_absoluteY="290dp" />

    <EditText
        android:id="@+id/editText_mainAddress"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/main_address"
        android:inputType="textPostalAddress"
        android:textCursorDrawable="@color/colorPrimary"
        tools:hint="@string/main_address"
        tools:layout_editor_absoluteX="62dp"
        tools:layout_editor_absoluteY="336dp" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="120dp"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_weight="1"
        android:background="#FFD123"
        android:text="@string/sign_up"
        android:textColor="#16518E"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="1.0" />
</LinearLayout>