<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3.5"
        app:srcCompat="@drawable/check_circle_green" />

    <TextView
        android:id="@+id/editText_surname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:gravity="center"
        android:hint="Your order has been\nplaced."
        android:inputType="textPersonName"
        android:textColorHighlight="@color/colorPrimary"
        android:textCursorDrawable="@color/colorPrimary"
        android:textSize="24sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom|right|center"
                android:inputType="textPersonName"
                android:text="Now we'll ask your Friend "
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/TextView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom|left"
                android:inputType="textPersonName"
                android:text="@string/receiver"
                android:textColor="@color/deliveredStatus" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:inputType="textPersonName"
                android:text="and the Carrier "
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/TextView4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="left|center"
                android:inputType="textPersonName"
                android:text="@string/carrier"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="right|center"
                android:inputType="textPersonName"
                android:text=" for"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:text="confirmation."
                android:textColor="@android:color/black" />

        </LinearLayout>
    </LinearLayout>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="11dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="11dp"
        android:layout_weight="0.75"
        android:backgroundTint="@color/colorAccent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/back_to_homepage"
        android:textColor="#16518E"
        android:textSize="18sp"
        app:layout_constraintVertical_bias="1.0" />
</LinearLayout>